Sat Sep  8 10:22:20 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (rb_struct_s_members): should raise TypeError instead
	  of call rb_bug().  [ruby-dev:31709]

	* marshal.c (r_object0): no nil check require any more.

Sat Sep  8 09:38:19 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (str[fp]time): now check specifications more
	  strictly.

Fri Sep  7 05:36:19 2007  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb (MockClock): correct synchronous problems 
	  of the MultiThreading. [ruby-dev:31692]

Wed Sep  5 22:02:27 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_subseq): need integer overflow check.
	  [ruby-dev:31736]

	* array.c (rb_ary_splice): ditto.  [ruby-dev:31737]

	* array.c (rb_ary_fill): ditto.  [ruby-dev:31738]

	* string.c (rb_str_splice): integer overflow for length.
	  [ruby-dev:31739]

Sun Sep  2 00:48:15 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (_parse): improved parsing of ordinal dates.

	* lib/date/format.rb (_parse): use named character classes in some
	  regular expressions.

Sat Sep  1 08:13:36 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE#ole_activex_initialize.

Thu Aug 30 13:13:13 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_const, have_const): check for a const is defined.
	  [ruby-core:04422]

Thu Aug 30 13:10:57 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (group_member): check if presents.

	* configure.in (XCFLAGS): add _GNU_SOURCE on linux.

	* file.c (group_member): use system routine if available.

Thu Aug 30 08:24:18 2007  Tanaka Akira  <akr@fsij.org>

	* ruby.h (RHASH_TBL): defined for compatibility to 1.9.
	* (RHASH_ITER_LEV): ditto.
	* (RHASH_IFNONE): ditto.
	* (RHASH_SIZE): ditto.
	* (RHASH_EMPTY_P): ditto.

Wed Aug 29 13:05:59 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* include/ruby/defines.h (flush_register_windows): call "ta 0x03"