@@ -1,3 +1,8 @@
+Sun Sep  9 09:14:45 2007  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* lib/date/format.rb (_strptime): now also attaches an element
+	  which denotes leftover substring if exists.
+
 Sat Sep  8 10:22:20 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* struct.c (rb_struct_s_members): should raise TypeError instead
